version 0.9.5 (TBA) :
	* Remove old configuration conversion script
	* Updated documentation
	* Use glade to generate the config wizard
	* Gettextize
	* Added true transparency
	* Fixed another bug in getting the new lock file (Thanks Wilberding)
	* Removed resize/move from hide when animation is turned off.
	  This will fix the closing of certain program (i.e. nano) when
	  Tilda is hidden

version 0.9.4 (11-28-06):
	* Double Buffering is now in the Preferences. Enable or disable to fix
	  problems with blinking on your system
	* Add support for a window icon.
	* Add a --hidden command line option.
	* Change "Display pulled down on start" to "Start Tilda hidden".
	* Updated the Preferences window.
	* Add "centered horizontally" and "centered vertically" options.
	* Enable double buffering by default.
	* Fix getnextinstance() function.
	* Changed default slide delay to 15000
	* Now installs .desktop file and icon
	* Set copy/paste to ctrl-shift-c/ctrl-shift-v
	* Alt-# for switching tabs now :), sorry for all the changes
	* Changed getinstance back to its old way of working,
	  so it doesn't just count locks but checks the numbers (thanks wilber)

version 0.09.3 (2006-6-28):
	* ctrl-# changes tab, sorry not alt-# (bash uses that)
	* ctrl-shift-w fix
	* Added ability to set height/width by percentage of screen resolution
	* All Tabs are now the same size
	* Remove stale code (apply() function).
	* Patch from Danny Milosavljevic (thanks!) which fixes:
	* "tilda -C", then Cancel quits app now
	* wizard is a gtk dialog now (modal, not sure if it's used in other
	  places than the -C command line arg)
	* wizard uses stock buttons now
	* fixed the command line in the wizard to take command line arguments
	  as well
	* fixed the restart handling in close_tab_on_exit (combo entry order
	  changed, but the switch statement contained the old order - it seems)
	* fixed a strlen warning in tilda_window.c
	* removed the apply button since it was confusing
